--- a/src/ui/component/DisciteCourse.html
+++ b/src/ui/component/DisciteCourse.html
@@ -9,6 +9,16 @@
     <div class="discite__properties discite__properties--{{modifier || ''}} u-clearfix">
         <ul class="discite__property discite__property--{{modifier || ''}}">
             <li class="discite__property-item">
+                {{#if course.record && course.record.state && course.record.state !== 'RETRIEVED' && course.record.state !== 'ARCHIVED' }}
+                <div class="discite__status">
+                    <span class="badge badge--discite badge--info">{{i18n(course.record.state)}}</span>
+                    {{#if course.getSelectedDate()}}
+                    <span class="meta">{{datetime.formatDate(course.getSelectedDate())}}</span>
+                    {{/if}}
+                </div>
+                {{/if}}
+            </li>
+            <li class="discite__property-item">
                 <span class="visuallyhidden">Type:</span>
                 <span class="lpg-course-type">{{i18n(course.getType())}}</span>
             </li>
@@ -21,14 +31,6 @@
             </li>
             {{/if}}
         </ul>
-        {{#if course.record && course.record.state && course.record.state !== 'RETRIEVED' && course.record.state !== 'ARCHIVED' }}
-        <div class="discite__status">
-            <span class="badge badge--info">{{i18n(course.record.state)}}</span>
-            {{#if course.getSelectedDate()}}
-            <span class="meta">{{datetime.formatDate(course.getSelectedDate())}}</span>
-            {{/if}}
-        </div>
-        {{/if}}
     </div>
     {{#if course.shortDescription}}
     <div class="discite__desc">
