--- a/src/management-ui/component/Audience.html
+++ b/src/management-ui/component/Audience.html
@@ -20,8 +20,8 @@
                     <li class="audience__item">{{ i18n('departments')[department]}}</li> {{/each}}
                 </ul>
             </td>
-            <td class="key-value-list__item-action">
-                <button name="submit" type="submit" class="button" value="change_{{i}}_department">Change</button>
+            <td >
+                <button name="submit" type="submit" class="button audience__button" value="change_{{i}}_department">Change</button>
             </td>
         </tr>
         <tr>
@@ -32,8 +32,8 @@
                     <li class="audience__item">{{ i18n('areas-of-work')[aow]}}</li> {{/each}}
                 </ul>
             </td>
-            <td class="key-value-list__item-action">
-                <button name="submit" type="submit" class="button" value="change_{{i}}_profession">Change</button>
+            <td >
+                <button name="submit" type="submit" class="button audience__button" value="change_{{i}}_profession">Change</button>
             </td>
         </tr>
         <tr>
@@ -42,8 +42,8 @@
                 {{#each audience.grades as grade}}
                 <li class="audience__item">{{ i18n('grades')[grade]}}</li> {{/each}}
             </td>
-            <td class="key-value-list__item-action">
-                <button name="submit" type="submit" class="button" value="change_{{i}}_grade">Change</button>
+            <td >
+                <button name="submit" type="submit" class="button audience__button" value="change_{{i}}_grade">Change</button>
             </td>
         </tr>
         <tr>
@@ -52,36 +52,33 @@
                 <input id="mandatory" type="checkbox" name="mandatory" value="true" checked="{{ audience.mandatory=== 'true'  ? 'checked' : '' }}"
                     disabled="disabled">
             </td>
-            <td class="key-value-list__item-action">
-                <button name="submit" type="submit" class="button" value="change_{{i}}_mandatory">Change</button>
+            <td >
+                <button name="submit" type="submit" class="button audience__button" value="change_{{i}}_mandatory">Change</button>
             </td>
         </tr>
         <tr>
             <td class="key-value-list__key key-value-list__key--auto">{{i18n('audience_frequency_label')}}</td>
             <td class="key-value-list__value key-value-value--auto lpg-frequency">
                 {{audience.frequency? i18n('frequency')[audience.frequency] : '' }}</td>
-            <td class="key-value-list__item-action">
-                <button name="submit" type="submit" class="button" value="change_{{i}}_frequency">Change</button>
+            <td>
+                <button name="submit" type="submit" class="button audience__button" value="change_{{i}}_frequency">Change</button>
             </td>
         </tr>
         <tr>
             <td class="key-value-list__key key-value-list__key--auto">{{i18n('audience_required-by_label')}}</td>
             <td class="key-value-list__value key-value-value--auto lpg-required-by">
                 {{ audience.requiredBy ? datetime.formatDate(audience.requiredBy) : ''}}</td>
-            <td class="key-value-list__item-action">
-                <button name="submit" type="submit" class="button" value="change_{{i}}_required">Change</button>
+            <td>
+                <button name="submit" type="submit" class="button audience__button" value="change_{{i}}_required">Change</button>
             </td>
         </tr>
         <tr>
-            <td class="key-value-list__item-action" colspan="4">
+            <td  colspan="4">
                 {{#if i !== 0 }}
-                <button name="submit" type="submit" class="button audience__button--remove" value="remove_audience_{{i}}">Remove this Audience</button>{{/if}} {{#if i === audiences.length-1 }}
+                <button name="submit" type="submit" class="button--remove" value="remove_audience_{{i}}">Remove this Audience</button>{{/if}} {{#if i === audiences.length-1 }}
                 <button name="submit" type="submit" class="button" value="add_audience">Add Audience</button>{{/if}}
             </td>
         </tr>
     </tbody>
     {{/each}}
 </table>
-<p>
-
-</p>
