--- a/src/management-ui/assets/styles/components/_resource.scss
+++ b/src/management-ui/assets/styles/components/_resource.scss
@@ -119,7 +119,6 @@
 	@include e(description) {
 		@include m(module) {
 			float: left;
-			width: 100%;
 			display: block;
 		}
 	}
@@ -134,5 +133,12 @@
 .resources {
 	.resource:last-of-type {
 		border-bottom: 0;
+	}
+}
+
+.module {
+	@include e(top-info) {
+		display: block;
+		float: left;
 	}
 }
