lpfg-144 if module description present, show

--- a/src/ui/component/DisciteModule.html
+++ b/src/ui/component/DisciteModule.html
@@ -3,6 +3,9 @@
         <h3 class="heading  heading--text">
             {{module.title}}
         </h3>
+        {{#if module.description}}
+            <p>{{module.description}}</p>
+        {{/if}}
     </div>
     <div class="discite__properties discite__properties--module u-clearfix">
         <ul class="discite__property discite__property--module">
