--- a/src/ui/component/DisciteModule.html
+++ b/src/ui/component/DisciteModule.html
@@ -1,10 +1,10 @@
 <div class="discite__item u-clearfix discite__item--module">
     <div class="discite__main discite__main--module">
-        <h3 class="heading  heading--text">
+        <h3 class="heading bold-small heading--text">
             {{module.title}}
         </h3>
         {{#if module.description}}
-            <p>{{module.description}}</p>
+            <p class="discite__description">{{module.description}}</p>
         {{/if}}
     </div>
     <div class="discite__properties discite__properties--module u-clearfix">
