--- a/src/management-ui/assets/styles/index.scss
+++ b/src/management-ui/assets/styles/index.scss
@@ -8,6 +8,7 @@
 @import 'components/audience';
 @import 'components/footer';
 @import 'components/related-items';
+@import 'components/discite';
 
 .u-clearfix {
 	li {
