--- a/src/ui/component/DisciteCourse.html
+++ b/src/ui/component/DisciteCourse.html
@@ -32,6 +32,11 @@
             {{/if}}
         </ul>
     </div>
+    <div class="discite__area">
+        <p class="font-small">
+            This course comprises of {{ currentReq.__n('%s module', course.modules.length) }}
+        </p>
+    </div>
     {{#if course.shortDescription}}
     <div class="discite__desc">
         {{course.shortDescription}}
