--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -16,6 +16,7 @@
 @import 'components/footer';
 @import 'components/home';
 @import 'components/course';
+@import 'components/leftSearchBox';
 @import 'components/rightbox';
 @import 'components/basket';
 @import 'components/feedback';
