LPFG-190 fix badge positioning pushing out other values

--- a/src/ui/assets/styles/components/_discite.scss
+++ b/src/ui/assets/styles/components/_discite.scss
@@ -81,6 +81,8 @@ $module: 'discite';
 			//this should not be here, .badge is being imported too late in main.scss
 			@include m(discite) {
 				margin-bottom: 0;
+				position: absolute;
+				right: 0;
 			}
 		}
 
