--- a/src/ui/assets/styles/components/_discite.scss
+++ b/src/ui/assets/styles/components/_discite.scss
@@ -140,6 +140,10 @@ $module: 'discite';
 		}
 	}
 
+	@include e(counter) {
+		margin-bottom: 0;
+	}
+
 	@include e(action) {
 		//div.discite__action
 		@extend %disciteRowDiv;
