LPFG-191 confirmation message. Added slot to Banner.html for more customisation

--- a/src/ui/assets/styles/components/_banner.scss
+++ b/src/ui/assets/styles/components/_banner.scss
@@ -8,6 +8,11 @@
 	// Default
 	background-color: $light-blue;
 
+	@include e(action) {
+		display: inline-block;
+		margin-right: 10px;
+	}
+
 	a {
 		&:link,
 		&:visited,
