--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -34,6 +34,7 @@
 @import 'components/accessible-auto-complete';
 @import 'components/pagination';
 @import 'components/tabs';
+@import 'components/levels';
 
 .phase-banner {
 	@extend %site-width-container;
