--- a/src/ui/component/Levels.html
+++ b/src/ui/component/Levels.html
@@ -1,7 +1,7 @@
 <div class="levels u-clearfix">
     {{#each levels as levelOptions, level}}
 
-        <Level :levelOptions :level :selected/>
+        <Level :levelOptions :level :selected :selectedArr/>
 
     {{/each}}
 </div>
