--- a/src/ui/component/Level.html
+++ b/src/ui/component/Level.html
@@ -4,12 +4,17 @@
         {{#each Object.entries(levelOptions) as option}}
 
             <li>
-                <a href="/profile/areas-of-work/{{selected ? selected + '/' : ''}}{{option[0]}}" class="levels__link {{selectedArr && option[0] === selectedArr[level] ? 'levels__link--selected' : '' }}">{{(option[1])}}</a>
+                {{#if level !== 3}}
+                    <a href="/profile/areas-of-work/{{selectedArr ? selectedArr.slice(0, level).join('/') : '' }}{{level > 0 ? '/' : ''}}{{option[0]}}" class="levels__link {{selectedArr && option[0] === selectedArr[level] ? 'levels__link--selected' : '' }}">{{(option[1])}}</a>
+                {{else}}
+                    <a href="/profile/areas-of-work/?select={{option[0]}}" class="levels__link {{selectedArr && option[0] === selectedArr[level] ? 'levels__link--selected' : '' }}">{{(option[1])}}</a>
+                {{/if}}
+
             </li>
         {{/each}}
 		<li>
 			<a
-				href="/profile/areas-of-work/"
+				href="/profile/areas-of-work/?select={{selectedArr[level] ? selectedArr[level] : level}}"
 				class="levels__link levels__link--unsure">
 				Choose this level
 			</a>
