LPFG-185 Privacy page

--- a/src/ui/component/Footer.html
+++ b/src/ui/component/Footer.html
@@ -1,7 +1,18 @@
-<footer class="group js-footer" id="footer" role="contentinfo">
+;<footer class="group js-footer" id="footer" role="contentinfo">
 	<div class="footer-wrapper">
 		<div class="footer-meta">
 			<div class="footer-meta-inner">
+				<ul>
+					<li>
+						<a href="https://www.gov.uk/help/cookies">Cookies</a>
+					</li>
+					<li>
+						<a href="/privacy">Privacy</a>
+					</li>
+					<li>
+						Built by the <a href="#">Civil Service Learning Platform</a>
+					</li>
+				</ul>
 				<div class="open-government-licence">
 					<p class="logo">
 						<a
