--- a/src/ui/component/Footer.html
+++ b/src/ui/component/Footer.html
@@ -1,4 +1,4 @@
-;<footer class="group js-footer" id="footer" role="contentinfo">
+<footer class="group js-footer" id="footer" role="contentinfo">
 	<div class="footer-wrapper">
 		<div class="footer-meta">
 			<div class="footer-meta-inner">
