--- a/src/ui/assets/styles/components/_discite.scss
+++ b/src/ui/assets/styles/components/_discite.scss
@@ -38,6 +38,12 @@ $module: 'discite';
 		@include media(desktop) {
 			padding-right: 300px;
 		}
+
+		@include m(module) {
+			@include m(search) {
+				padding-right: 100px;
+			}
+		}
 	}
 
 	@include e(heading) {
@@ -50,6 +56,10 @@ $module: 'discite';
 
 		@include media(desktop) {
 			padding-right: 300px;
+		}
+
+		@include m(search) {
+			padding-right: 100px;
 		}
 	}
 
