--- a/src/ui/component/DisciteCourse.html
+++ b/src/ui/component/DisciteCourse.html
@@ -20,11 +20,10 @@
             </li>
             <li class="discite__property-item">
                 <span class="visuallyhidden">Type:</span>
-                <span class="lpg-course-type">{{i18n(course.getType())}}</span>
+                <span class="lpg-course-type">{{i18n(course.getType() || '' )}}</span>
             </li>
             <li class="discite__property-item">
-                <span class="visuallyhidden">Duration:</span> {{course.getDuration()}}
-
+                <span class="visuallyhidden">Duration:</span> {{course.getDuration() || ''}}
             </li>
             {{#if !course.isRequired(signedInUser)}}
             <li class="discite__property-item">
@@ -41,7 +40,7 @@
         </div>
     {{/if}}
     {{#if course.shortDescription}}
-    <div class="discite__desc">
+    <div class="discite__desc discite__desc--{{modifier || ''}}">
         {{course.shortDescription}}
     </div>
     {{/if}}
