load courses into search

--- a/src/ui/component/LeftSearchBox.html
+++ b/src/ui/component/LeftSearchBox.html
@@ -21,7 +21,7 @@
                         <label for"video">Link</label>
                     </div>
                 <div class="multiple-choice">
-                    <input type="checkbox" name="courseType" value="online" checked="{{(courseType || []).indexOf('online') > -1 ? 'checked' : ''}}" >
+                    <input type="checkbox" name="courseType" value="elearning" checked="{{(courseType || []).indexOf('elearning') > -1 ? 'checked' : ''}}" >
                     <label for"video">Online</label>
                 </div>
                 <div class="multiple-choice">
