LPFG-265 Mobile styles and "choose this level" link logic

--- a/src/ui/component/Levels.html
+++ b/src/ui/component/Levels.html
@@ -1,7 +1,6 @@
+<LevelsNav :levels :selectedArr/>
 <div class="levels u-clearfix">
     {{#each levels as levelOptions, level}}
-
         <Level :levelOptions :level :selected :selectedArr/>
-
     {{/each}}
 </div>
