--- a/src/ui/assets/styles/components/_levels.scss
+++ b/src/ui/assets/styles/components/_levels.scss
@@ -1,20 +1,42 @@
-$module: 'levels';
+%nav-link {
+	position: relative;
+	display: inline-block;
+	margin-right: 4px;
+	padding: 4px 4px 4px 12px;
+
+	&:before {
+		position: absolute;
+		content: '\203A';
+		top: 4px;
+		left: 0;
+		color: #003;
+	}
+}
 
 .levels {
 	margin-bottom: 30px;
 
 	@include e(col) {
-		@include m(4) {
-			width: 24%;
-		}
-
-		position: relative;
-		width: 30%;
-		float: left;
-		border-right: 1px solid $grey-3;
+		width: 100%;
+		display: none;
 
 		&:last-of-type {
+			display: block;
+			float: none;
 			border-right: 0;
+		}
+
+		@include media(tablet) {
+			border-right: 1px solid $grey-3;
+			position: relative;
+			float: left;
+			width: 24%;
+			display: block;
+
+			&:last-of-type {
+				float: left;
+				border-right: 0;
+			}
 		}
 	}
 
@@ -38,7 +60,7 @@ $module: 'levels';
 			background: #f1f1f1;
 		}
 
-		@include m('selected') {
+		@include m(selected) {
 			background-color: #005ea5;
 			color: #fff;
 			&:visited,
@@ -58,5 +80,46 @@ $module: 'levels';
 				content: '';
 			}
 		}
+	}
+}
+
+.levels-nav {
+	margin-bottom: 15px;
+	padding-bottom: 5px;
+
+	@include media(desktop) {
+		display: none;
+	}
+
+	@include e(list) {
+		// ul.levels-nav__list
+		text-align: left;
+	}
+
+	@include e(item) {
+		// li.levels-nav__item
+		display: inline-block;
+
+		&:first-of-type {
+			.level-nav__link {
+				margin-right: 0;
+				padding-left: 0;
+
+				&:before {
+					content: '';
+				}
+			}
+		}
+	}
+
+	@include e(link) {
+		// a.levels-nav__last
+		@extend %nav-link;
+	}
+
+	@include e(last) {
+		// span.levels-nav__last
+		@extend %nav-link;
+		@include bold-19;
 	}
 }
