--- a/src/ui/component/Level.html
+++ b/src/ui/component/Level.html
@@ -1,8 +1,6 @@
-<div class="levels__col levels__col--4">
-
+<div class="levels__col">
 	<ul class="levels__list">
         {{#each Object.entries(levelOptions) as option}}
-
             <li>
                 {{#if level !== 3}}
                     <a href="/profile/areas-of-work/{{selectedArr ? selectedArr.slice(0, level).join('/') : '' }}{{level > 0 ? '/' : ''}}{{option[0]}}" class="levels__link {{selectedArr && option[0] === selectedArr[level] ? 'levels__link--selected' : '' }}">{{(option[1])}}</a>
@@ -12,12 +10,14 @@
 
             </li>
         {{/each}}
-		<li>
-			<a
-				href="/profile/areas-of-work/?select={{selectedArr && selectedArr[level] ? selectedArr[level] : level}}"
-				class="levels__link levels__link--unsure">
-				Choose this level
-			</a>
-		</li>
+        {{#if selectedArr.length !== level}}
+            <li>
+                <a
+                    href="/profile/areas-of-work/?select={{selectedArr && selectedArr[level] ? selectedArr[level] : level}}"
+                    class="levels__link levels__link--unsure">
+                    Choose this level
+                </a>
+            </li>
+		{{/if}}
 	</ul>
 </div>
