LPFG-265 hide last "choose this level" on desktop

--- a/src/ui/assets/styles/components/_levels.scss
+++ b/src/ui/assets/styles/components/_levels.scss
@@ -74,10 +74,16 @@
 			}
 		}
 
-		@include m('unsure') {
+		@include m(unsure) {
 			@include bold-16;
 			&:after {
 				content: '';
+			}
+		}
+
+		@include m(last) {
+			@include media(tablet) {
+				display: none;
 			}
 		}
 	}
