--- a/src/ui/component/Feedback.html
+++ b/src/ui/component/Feedback.html
@@ -6,7 +6,7 @@
                 <div class="feedback-details">
                     <h2>Help us improve Civil Service Learning</h2>
                     <p>Don’t include personal or financial information like your National Insurance number or credit card details.</p>
-                    <form action="/feedback.record" method="post">
+                    <form autocomplete="nope" action="/feedback.record" method="post">
                         <label for="whatDoing">What were you doing?</label>
                         <input name="whatDoing" id="whatDoing">
                         <label for="wentWrong">What went wrong?</label>
