--- a/src/ui/component/LeftSearchBox.html
+++ b/src/ui/component/LeftSearchBox.html
@@ -1,5 +1,5 @@
 <aside role="complementary">
-    <form name="searchLearning" method="get" action="/search">
+    <form autocomplete="nope" name="searchLearning" method="get" action="/search">
         <input type="hidden" id="q" name="q" value="{{ query }}" />
         <div class="govuk-related-items govuk-related-items--flush form-group  govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox">
             <fieldset>
