--- a/src/ui/component/User.html
+++ b/src/ui/component/User.html
@@ -1,4 +1,4 @@
-<form method="post" action="/profile" class="push-bottom">
+<form autocomplete="nope" method="post" action="/profile" class="push-bottom">
     <div class="form-group">
         <label class="form-label" for="userName">Email address</label>
         <input class="form-control" id="userName" name="userName" value="{{user.emailAddress}}" type="text" readonly="readonly">
