--- a/src/ui/component/Find.html
+++ b/src/ui/component/Find.html
@@ -1,6 +1,6 @@
 
 <h1 class="heading-large">Find course</h1>
-<form method="get" role="search">
+<form autocomplete="nope" method="get" role="search">
     <div class="form-group">
         <input class="form-control" id="search" type="text" name="search" />
         <input class="button" type="submit" value="Search" />
