--- a/src/ui/component/DisciteModule.html
+++ b/src/ui/component/DisciteModule.html
@@ -1,7 +1,7 @@
 <div class="discite__item u-clearfix discite__item--module">
     <div class="discite__main discite__main--module {{ modifier ? `discite__main--${modifier}` : ''}}">
             {{#if modifier === "search"}} 
-            <a href="/courses/{{module.course.id}}/{{module.id}}">
+            <a href="/courses/{{course.id}}/{{module.id}}">
                 <h3 class="heading bold-small heading--text">
                     {{module.title}}
                 </h3>
@@ -41,20 +41,19 @@
     </div>
     <div class="discite__action discite__action--module">
         {{#if modifier === "search"}} 
-        <a href="/courses/{{module.course.id}}/{{module.id}}">{{ i18n('action_' + (module.state || 'NOT_STARTED' )) }} <span class="visuallyhidden"> this module</span></a>
+        <a href="/courses/{{course.id}}/{{module.id}}">{{ i18n('action_' + (module.state || 'NOT_STARTED' )) }} <span class="visuallyhidden"> this module</span></a>
+
+        {{#if course.record && !course.isRequired(signedInUser)}}
+            {{#if  course.record.state === 'ARCHIVED'}}
+                <a class="lpg-add-from-search" href="/suggestions-for-you/add/{{course.id}}?ref={{modifier}}">Add to learning plan</a>
+            {{/if}}
+        {{else}}
+            {{#if !course.isRequired(signedInUser)}}
+                <a class="lpg-add-from-search" href="/suggestions-for-you/add/{{course.id}}?ref={{modifier}}">Add to learning plan</a>
+            {{/if}}
+        {{/if}}
         {{else}}
         <a href="/courses/{{course.id}}/{{module.id}}">{{ i18n('action_' + (module.state || 'NOT_STARTED' )) }} <span class="visuallyhidden"> this module</span></a>
         {{/if}}
-        {{ module.course.record }}
-        {{#if module.course.record && !module.course.isRequired(signedInUser)}}
-            {{#if  module.course.record.state === 'ARCHIVED'}}
-                <a class="lpg-add-from-search" href="/suggestions-for-you/add/{{module.course.id}}?ref={{modifier}}">Add to learning plan</a>
-            {{/if}}
-        {{else}}
-        {{#if !module.course.isRequired(signedInUser)}}
-            <a class="lpg-add-from-search" href="/suggestions-for-you/add/{{module.course.id}}?ref={{modifier}}">Add to learning plan</a>
-        {{/if}}
-    {{/if}}
-
     </div>
 </div>
