--- a/src/ui/component/Levels.html
+++ b/src/ui/component/Levels.html
@@ -1,6 +1,6 @@
 <LevelsNav :levels :selectedArr/>
 <div class="levels u-clearfix">
     {{#each levels as levelOptions, level}}
-        <Level :levelOptions :level :selected :selectedArr/>
+        <Level :levelOptions :level :selected :selectedArr :isEndOfBranch/>
     {{/each}}
 </div>
