--- a/src/ui/assets/styles/components/_discite.scss
+++ b/src/ui/assets/styles/components/_discite.scss
@@ -152,6 +152,10 @@ $module: 'discite';
 
 	@include e(counter) {
 		margin-bottom: 0;
+
+		@include m(search) {
+			padding-top: 10px;
+		}
 	}
 
 	@include e(action) {
