--- a/src/ui/component/DisciteModule.html
+++ b/src/ui/component/DisciteModule.html
@@ -8,8 +8,10 @@
             </a>
             <div class="discite__area {{modifier ? `discite__area--${modifier}` : ''}}">
                 <p class="font-small discite__counter">
-                    This is a module in <a href="/courses/{{module.course.id}}"><b>{{ module.course.title }}.</b></a> There are {{module.course.modules.length}} in total.
-                </p>
+					This is a module in <a href="/courses/{{module.course.id}}"><b>{{ module.course.title }}.</b></a>
+				</p>
+
+				<p  class="font-small discite__counter--search">There are {{module.course.modules.length}} in total.</p>
              </div>
             {{else}}
             <a href="/courses/{{course.id}}/{{module.id}}">
