--- a/src/ui/component/Level.html
+++ b/src/ui/component/Level.html
@@ -3,7 +3,7 @@
 
         {{#each levelOptions as option, index}}
             <li>
-                {{#if level !== 3}}
+                {{#if option.hasChildren || level === 0}}
                     <a href="/profile/areas-of-work/{{selectedArr ? selectedArr.slice(0, level).join('/') : '' }}{{level > 0 ? '/' : ''}}{{index}}" class="levels__link {{selectedArr[level] == index ? 'levels__link--selected' : ''}}">{{option.name}}</a>
                 {{else}}
                     <a href="/profile/areas-of-work/?select={{index}}" class="levels__link {{selectedArr[level] == index ? 'levels__link--selected' : ''}}">{{(option.name)}}</a>
@@ -13,13 +13,11 @@
         {{/each}}
         {{#if selectedArr}}
          <li>
-
             <a
                 href="/profile/areas-of-work/?select={{selectedArr[level] && selectedArr.length !== level ? selectedArr[level] :''}}"
                 class="levels__link levels__link--unsure {{selectedArr.length === level ? 'levels__link--last' : '' }}">
                 Choose this level
             </a>
-
         </li>
         {{/if}}
 	</ul>
