--- a/src/ui/assets/styles/components/_discite.scss
+++ b/src/ui/assets/styles/components/_discite.scss
@@ -115,7 +115,7 @@ $module: 'discite';
 		padding-right: 0;
 		padding-top: 6px;
 
-		@include media(desktop) {
+		@include media(tablet) {
 			width: 100%;
 			display: block;
 			float: none;
