--- a/src/ui/component/DisciteCourse.html
+++ b/src/ui/component/DisciteCourse.html
@@ -74,7 +74,15 @@
                         </a>
                     {{/if}}
                     {{#if !course.isRequired(signedInUser)}}
-                        <a href="/suggestions-for-you/remove/{{course.id}}?ref=home">Remove from learning plan</a>
+                        {{#if course.record.state === 'ARCHIVED'}}
+                            <a class="lpg-add-from-search" href="/suggestions-for-you/add/{{course.id}}?ref={{modifier}}">Add to learning plan</a>
+                        {{else}}
+                            {{#if modifier === "search"}}
+                                <span>Already in your learning plan</span>
+                            {{else}}
+                                <a href="/suggestions-for-you/remove/{{course.id}}?ref=home">Remove from learning plan</a>
+                            {{/if}}
+                        {{/if}}
                     {{/if}}
                 {{/if}}
             {{else}}
@@ -88,7 +96,7 @@
                     </a>
                 {{/if}}
                 {{#if !course.isRequired(signedInUser)}}
-                    <a href="/suggestions-for-you/remove/{{course.id}}?ref=home">Remove from learning plan</a>
+                    <a class="lpg-add-from-search" href="/suggestions-for-you/add/{{course.id}}?ref={{modifier}}">Add to learning plan</a>
                 {{/if}}
             {{/if}}
     </div>
