--- a/src/ui/component/Page.html
+++ b/src/ui/component/Page.html
@@ -9,7 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="/img/opengraph-image.png">
     <title>{{title}} &ndash; {{i18n('proposition_name')}}</title>
-    <link rel="stylesheet" href="/styles/main.css?v={{config.VER}}">
+	<link rel="stylesheet" href="/styles/main.css?v={{config.VER}}">
+	<link rel="stylesheet" href="/styles/video-js.min.css">
     <script src="/js/jquery.min.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id={{config.GOOGLE_ANALYTICS_ID}}"></script> {{{config.GOOGLE_ANALYTICS_CODE}}}
 </head>
