--- a/src/ui/component/Page.html
+++ b/src/ui/component/Page.html
@@ -17,7 +17,7 @@
 <body>
     <div id="global-cookie-message">
         <p>
-            GOV.UK uses cookies to make the site simpler.
+            This site uses cookies to make the site simpler.
             <a href="/cookies"> Find out more about cookies</a>
         </p>
     </div>
